<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/from_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/SMALL_MARGIN"
            android:layout_weight="1"
            android:hint="@string/from"
            android:inputType="text"
            android:maxLines="1" />

        <EditText
            android:id="@+id/to_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/SMALL_MARGIN"
            android:layout_weight="1"
            android:hint="@string/to"
            android:inputType="text"
            android:maxLines="1" />
    </LinearLayout>

    <TextView
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/SMALL_MARGIN"
        android:background="@drawable/rounded_corner_gray_background"
        android:padding="@dimen/MEDIUM_MARGIN"
        android:text="@string/search"
        android:textColor="@color/col_white" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>